tests/analyze/too-many-args/analyze.snap
---
source: tests/analyze.rs
expression: output
---
error: Parameter count mismatch: expected 1, but found 2.
> 5 | def bad = double 1 2
                ^^^^^^

